# advisor

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  advisor.txt  make.cmd  makefile  readme.md
doc/: notes.md
res/: format.cmake  launch.vs.json
src/: common.hpp  main.cpp
